--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ keywords:
   - A_KEYWORD
   - A_KEYWORD
 author: Jalen
-favicon: /images/avatar.jpg
-avatar: /images/avatar.jpg
+favicon: /images/headpic.jpg
+avatar: /images/headpic.jpg
 language: zh-CN
 timezone: Asia/Shanghai
 
