--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js: stable
 
+before_install:
+  - composer config --global github-oauth.github.com "$GITHUB_TOKEN"
+
 # S: Build Lifecycle
 install:
   - npm install
@@ -11,6 +14,14 @@ install:
 
 script:
   - hexo g
+  
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  on:
+    branch: master
 
 after_script:
   - cd ./public
