--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ after_script:
   - git config user.email "1152357479@qq.com"
   - git add .
   - git commit -m "Update docs"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${GITHUB_TOKEN}@${GH_REF}" master:master
 # E: Build LifeCycle
 
 branches:
