--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-algoliasearch": "^1.0.0",
     "hexo-autoprefixer": "^1.0.0",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.4",
@@ -18,10 +19,14 @@
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-less": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-multi-markdown-it": "^0.1.5",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
+    "hexo-symbols-count-time": "^0.7.1",
     "hexo-tag-bootstrap": "0.0.8",
     "hexo-tag-fontawesome": "^1.0.0"
+  },
+  "devDependencies": {
+    "hexo-feed": "^1.1.0"
   }
 }
